fix for text wrap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -28,7 +28,7 @@ progress[value] {
   -webkit-appearance: none;
    appearance: none;
 
-  width: 900px;
+  width: 720px;
   height: 80px;
 }
 
